src/sass/partials/_mixins.scss
@mixin bodyCopy {
    font-family: 'Guardian Text Egyptian Web';
    font-size: 16px;
    line-height: 22px;
}

@mixin dropCap($size) {
    display: inline-block;
    float: left;
    margin-right: $size * .1em;
    font-family: 'Guardian Egyptian Web';
    line-height: .6;
    text-transform: uppercase;
    height: $size * 22px;

    &__inner {
        font-size: $size * 26px;
        line-height: 0.79;
    }
}

@mixin banding($background-color) {
    font-family: 'Guardian Egyptian Web';
    line-height: 1.4;

    &__inner {
        display: inline;
        padding-bottom: .1em;
        background: linear-gradient($background-color, $background-color) no-repeat;
        box-shadow: 4px 0 0 $background-color, -4px 0 0 $background-color;
    }
}

